gather all in one table

--- a/lecture_summary/170921_html.md
+++ b/lecture_summary/170921_html.md
@@ -17,25 +17,25 @@
     * HTML forms - built-in validation, input types.
     * New and rarely used elements & attributes: `dialog`, `meter`, `progress`; `download`, `inert`, `ping` etc.
 
-Links:
-[WHATWG HTML Specification ](https://html.spec.whatwg.org/multipage/)
-[Elements description: ](https://html.spec.whatwg.org/multipage/#toc-semantics)
-[Content kinds diagram:](https://html.spec.whatwg.org/multipage/dom.html#kinds-of-content)
-[Usage summary of elements: ](https://html.spec.whatwg.org/multipage/text-level-semantics.html#usage-summary)
-[What is the difference between WHATWG & W3C (discussion on Reddit): ](https://www.reddit.com/r/javascript/comments/5swe9b/what_is_the_difference_between_the_w3c_and_the/)
+#### Links:
+* [WHATWG HTML Specification ](https://html.spec.whatwg.org/multipage/)
+* [Elements description: ](https://html.spec.whatwg.org/multipage/#toc-semantics)
+* [Content kinds diagram:](https://html.spec.whatwg.org/multipage/dom.html#kinds-of-content)
+* [Usage summary of elements: ](https://html.spec.whatwg.org/multipage/text-level-semantics.html#usage-summary)
+* [What is the difference between WHATWG & W3C (discussion on Reddit): ](https://www.reddit.com/r/javascript/comments/5swe9b/what_is_the_difference_between_the_w3c_and_the/)
 
-[Element vs Tag](http://perfectionkills.com/tag-is-not-an-element-or-is-it/)
-[HTML5 quiz](https://html5te.st/quiz/)
-[Character references in HTML ](https://mathiasbynens.be/notes/ambiguous-ampersands)
-[Example discussion about <h> element:](https://github.com/w3c/html/issues/774)
-[Discussion on importance of ‘lang’ attribute]( https://github.com/TryGhost/Casper/issues/286)
-[Talk by Vadim Makeev on Inhuman UI:]( https://pepelsbey.net/pres/inhuman-ui/)
-[Web standards podcast:] (https://soundcloud.com/web-standards)
-[Why icon fonts are not ok:]( https://github.com/blog/2112-delivering-octicons-with-svg)
-[Talk by Vadim Makeev on ‘picture’ element:](https://www.youtube.com/watch?v=Szo-2D7TtEU)
-[Course on accessibility on Egghead ](https://egghead.io/courses/start-building-accessible-web-applications-today)
-Resources on html, web standards and semantic elements:
-https://htmlacademy.ru/shorts
-https://htmlacademy.ru/
-https://wsd.events/
-http://html5doctor.com/
+* [Element vs Tag](http://perfectionkills.com/tag-is-not-an-element-or-is-it/)
+* [HTML5 quiz](https://html5te.st/quiz/)
+* [Character references in HTML ](https://mathiasbynens.be/notes/ambiguous-ampersands)
+* [Example discussion about <h> element:](https://github.com/w3c/html/issues/774)
+* [Discussion on importance of ‘lang’ attribute]( https://github.com/TryGhost/Casper/issues/286)
+* [Talk by Vadim Makeev on Inhuman UI:]( https://pepelsbey.net/pres/inhuman-ui/)
+* [Web standards podcast:](https://soundcloud.com/web-standards)
+* [Why icon fonts are not ok:]( https://github.com/blog/2112-delivering-octicons-with-svg)
+* [Talk by Vadim Makeev on ‘picture’ element:](https://www.youtube.com/watch?v=Szo-2D7TtEU)
+* [Course on accessibility on Egghead ](https://egghead.io/courses/start-building-accessible-web-applications-today)
+* Resources on html, web standards and semantic elements:
+    * https://htmlacademy.ru/shorts
+    * https://htmlacademy.ru/
+    * https://wsd.events/
+    * http://html5doctor.com/
